--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     display: block;
-
     margin: 0 auto;
     font-family: 'Inter', sans-serif;
     background: #0D1117;
@@ -49,7 +48,8 @@ nav {
 
 }
 
-li a {
+li,
+a {
     color: aliceblue;
     text-decoration: none;
 
@@ -90,9 +90,12 @@ li {
     justify-content: center;
     align-items: center;
     color: aliceblue;
+    height: 90vh;
 }
 
-.about_me_title {
+.about_me_title,
+.project_title,
+.contact_me_title {
     font-size: 1.2rem;
     background: #0D1117;
     border-radius: 7px;
@@ -100,6 +103,11 @@ li {
     padding: 1vh;
     padding-left: 10vh;
     padding-right: 10vh;
+}
+
+.project_title {
+    margin-top: 10vh;
+
 }
 
 .paragraphs {
@@ -127,20 +135,111 @@ li {
     font-weight: bold;
 }
 
-.tools{
+.tools {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 10vh;
+    gap: 8vh;
     margin-top: 5vh;
-    
+
 }
 
-.s{
+/* Programming skills & tools */
+.s {
     background: #21293B;
     border-radius: 7px;
-    border: 1px solid #2D343C;
     padding: 1vh;
-    padding-left: 3vh;
-    padding-right: 3vh;
+    padding-left: 5vh;
+    padding-right: 5vh;
+    border: 1px solid #2D343C;
+
+}
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: aliceblue;
+}
+
+.my_project {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    height: 100vh;
+}
+
+.project {
+    width: 40vh;
+    height: 40vh;
+    background: #21293B;
+    border-radius: 20px;
+    border: 1px solid #2D343C;
+
+}
+
+.contact_me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: aliceblue;
+    background: linear-gradient(90deg, #0D1117, #0f172a);
+    height: 100vh;
+
+}
+
+.contact_me_page {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 30vh;
+    padding-left: 10vh;
+    padding-right: 10vh;
+
+}
+
+.socials {
+    margin-top: 3vh;
+}
+
+.socials div {
+    padding-top: 2vh;
+    font-size: 1rem;
+    color: #f0f0f0;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+}
+
+.email_me {
+    display: flex;
+    flex-direction: column;
+    color: #f0f0f0;
+    width: 50vh;
+    font-size: 1rem;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
+
+}
+
+.email_me input:not(#submit), textarea{
+    margin-top: 1vh;
+    height: 5vh;
+    width: 50vh;
+    padding: 8px;
+    border: 1px solid #444;
+    border-radius: 6px;
+    font-size: 16px;
+    background-color: #1e1e2f;
+
+
+}
+
+.email_me label {
+    margin-top: 3vh;
+}
+
+textarea {
+  resize: vertical;
 }
