--- a/style.css
+++ b/style.css
@@ -231,7 +231,6 @@ li {
     display: flex;
     flex-direction: column;
     color: #f0f0f0;
-    width: 50vh;
     font-size: 1rem;
     text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
 
@@ -407,7 +406,6 @@ textarea {
     .contact_me_page {
 
         display: block;
-        margin-left: 25vh;
     }
 
 
@@ -421,6 +419,9 @@ textarea {
 
     }
 
+    .email_me{
+        width: 0;
+    }
     
 
     #submit {
