--- a/style.css
+++ b/style.css
@@ -44,6 +44,16 @@ h1 span {}
     border: 1px solid #2D343C;
 }
 
+.top_bar.minimized {
+    /* width: 50vw; */
+    position: fixed;
+    top: 0;
+    right: 50px;
+    left: 50px;
+    border: 2px solid #2D343C;
+
+}
+
 .title {
     margin: 10px;
     padding-left: 10vh;
@@ -405,7 +415,7 @@ footer {
     }
 
     li {
-        font-size: .7rem;
+        font-size: 1rem;
     }
 
     .hamburger {
@@ -416,20 +426,26 @@ footer {
 
     .navbar {
         position: absolute;
-        flex-direction: row;
+        flex-direction: column;
         top: 90px;
         right: 5vh;
         left: 50;
-        border: 1px solid #2D343C;
+        border: 2px solid #2D343C;
         border-radius: 5px;
-        /* width: 70vw; */
         display: none;
-        /* padding: vh; */
         background-color: #0D1117;
     }
 
     .navbar.active {
         display: flex;
+    }
+
+
+    .top_bar.minimized .navbar {
+        /* width: 50vw; */
+        top: 60px;
+        right: .5vh;
+
     }
 
     .image {
