--- a/style.css
+++ b/style.css
@@ -45,14 +45,27 @@ h1 span {}
 }
 
 .top_bar.minimized {
-    /* width: 50vw; */
+    width: 35vw;
     position: fixed;
     top: 0;
     right: 50px;
     left: 50px;
-    border: 2px solid #2D343C;
+    border: 2px solid #3BB3C0;
+    padding: 1vh;
+    border-radius: 50vw;
+    justify-content: center;
+    justify-self: center;
+    justify-items: center;
+    align-items: center;
 
 }
+
+.top_bar.minimized .title {
+    /* width: 50vw; */
+    display: none;
+
+}
+
 
 .title {
     margin: 10px;
@@ -427,7 +440,7 @@ footer {
     .navbar {
         position: absolute;
         flex-direction: column;
-        top: 90px;
+        top: 100px;
         right: 5vh;
         left: 50;
         border: 2px solid #2D343C;
@@ -441,13 +454,34 @@ footer {
     }
 
 
-    .top_bar.minimized .navbar {
-        /* width: 50vw; */
-        top: 60px;
-        right: .5vh;
-
+    .top_bar.minimized .title {
+        display: none;
     }
 
+    .top_bar.minimized {
+        justify-content: end;
+        width: 5vw;
+        border-radius: 10px;
+        pad: 1vh;
+        right: 100vw;
+        left: 100vw;
+    }
+
+    .top_bar.minimized .navbar {
+        top: 60px;
+        right: 0;
+        left: 50;
+        border: 2px solid #3BB3C0;
+    }
+
+    .top_bar.top_bar.minimized 
+    .hamburger {
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        margin-right: 0;
+        padding-top: 0;
+    }
     .image {
         display: none;
     }
