--- a/style.css
+++ b/style.css
@@ -438,6 +438,7 @@ footer {
     }
 
     .navbar {
+        display: flex;
         position: absolute;
         flex-direction: column;
         top: 100px;
@@ -460,7 +461,7 @@ footer {
 
     .top_bar.minimized {
         justify-content: end;
-        width: 5vw;
+        width: auto;
         border-radius: 10px;
         left: 100vw;
     }
@@ -470,16 +471,17 @@ footer {
         right: 0;
         left: 50;
         border: 2px solid #3BB3C0;
+        padding: 5px;
     }
 
-    .top_bar.top_bar.minimized 
-    .hamburger {
+    .top_bar.top_bar.minimized .hamburger {
         display: grid;
         justify-items: center;
         align-items: center;
-        margin-right: 0;
-        padding-top: 0;
+        margin: 0;
+        padding: 4px;
     }
+
     .image {
         display: none;
     }
@@ -567,14 +569,60 @@ footer {
 
     }
 
+
     li {
-        display: none;
+        font-size: 1.2rem;
     }
+
 
     .hamburger {
         display: block;
         margin-right: 3vw;
         padding-top: 1vh;
+    }
+
+    .navbar {
+        position: absolute;
+        flex-direction: column;
+        top: 100px;
+        right: 5vh;
+        left: 50;
+        border: 2px solid #2D343C;
+        border-radius: 5px;
+        display: none;
+        background-color: #0D1117;
+    }
+
+    .navbar.active {
+        display: flex;
+    }
+
+
+    .top_bar.minimized .title {
+        display: none;
+    }
+
+    .top_bar.minimized {
+        justify-content: end;
+        width: auto;
+        border-radius: 10px;
+        left: 100vw;
+    }
+
+    .top_bar.minimized .navbar {
+        top: 60px;
+        right: 0;
+        left: 50;
+        border: 2px solid #3BB3C0;
+        padding: 5px;
+    }
+
+    .top_bar.top_bar.minimized .hamburger {
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        margin: 0;
+        padding: 4px;
     }
 
     .title {
@@ -672,13 +720,58 @@ footer {
     }
 
     li {
-        display: none;
+        font-size: 1.3rem;
     }
+
 
     .hamburger {
         display: block;
         margin-right: 3vw;
         padding-top: 1vh;
+    }
+
+    .navbar {
+        position: absolute;
+        flex-direction: column;
+        top: 100px;
+        right: 5vh;
+        left: 50;
+        border: 2px solid #2D343C;
+        border-radius: 5px;
+        display: none;
+        background-color: #0D1117;
+    }
+
+    .navbar.active {
+        display: flex;
+    }
+
+
+    .top_bar.minimized .title {
+        display: none;
+    }
+
+    .top_bar.minimized {
+        justify-content: end;
+        width: auto;
+        border-radius: 10px;
+        left: 100vw;
+    }
+
+    .top_bar.minimized .navbar {
+        top: 60px;
+        right: 0;
+        left: 50;
+        border: 2px solid #3BB3C0;
+        padding: 5px;
+    }
+
+    .top_bar.top_bar.minimized .hamburger {
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        margin: 0;
+        padding: 4px;
     }
 
     .home {
@@ -759,7 +852,8 @@ footer {
     }
 
     li {
-        display: flex;
+        display: block;
+        font-size: 1rem;
     }
 
     .hamburger {
@@ -767,22 +861,32 @@ footer {
 
     }
 
-    .top_bar {
+    .top_bar.minimized {
+        width: 35vw;
+        position: fixed;
+        top: 0;
+        right: 50px;
+        left: 50px;
+        border: 2px solid #3BB3C0;
+        padding: 1vh;
+        border-radius: 50vw;
+        justify-content: center;
+        justify-self: center;
+        justify-items: center;
+        align-items: center;
 
-        gap: 30vh;
-        background: #0D1117;
-        border-radius: 10px;
-        border: 1px solid #2D343C;
     }
 
-    .nav {
-        display: block;
+    .top_bar.minimized .title {
+        /* width: 50vw; */
+        display: none;
+
     }
 
-    nav {
-        display: flex;
+    .navbar{
+        flex-direction: row;
+        width: 50vw;
     }
-
 
     .image {
         display: block;
