--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ h3 {
     font-weight: bold;
 }
 
-h1 span {}
 
 .container {
     width: 100%;
@@ -45,7 +44,7 @@ h1 span {}
 }
 
 .top_bar.minimized {
-    width: 35vw;
+    width: auto;
     position: fixed;
     top: 0;
     right: 50px;
