--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,12 +120,12 @@ li {
 .home-hero{
 
     background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.1'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-
+    
 }
 
 .home-hero::before{
-    content: "";
-    position: absolute;
+  content: "";
+  position: absolute;
   inset: 0;
   height: 15%;
   background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,0));
@@ -520,8 +520,8 @@ footer {
         display: flex;
         position: absolute;
         flex-direction: column;
-        top: 100px;
-        right: 5vh;
+        top: 60px;
+        right: 0;
         left: 50;
         border: 2px solid #2D343C;
         border-radius: 5px;
@@ -673,8 +673,8 @@ footer {
     .navbar {
         position: absolute;
         flex-direction: column;
-        top: 100px;
-        right: 5vh;
+        top: 60px;
+        right: 0;
         left: 50;
         border: 2px solid #2D343C;
         border-radius: 5px;
@@ -818,8 +818,8 @@ footer {
     .navbar {
         position: absolute;
         flex-direction: column;
-        top: 100px;
-        right: 5vh;
+        top: 60px;
+        right: 0;
         left: 50;
         border: 2px solid #2D343C;
         border-radius: 5px;
