--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,8 @@ textarea {
     font-style: normal;
 }
 
+
+
 .navbar a {
     font-family: "JetBrains Mono", monospace;
     font-optical-sizing: auto;
@@ -517,7 +519,6 @@ footer {
     }
 
     .navbar {
-        display: flex;
         position: absolute;
         flex-direction: column;
         top: 60px;
@@ -526,7 +527,6 @@ footer {
         border: 2px solid #2D343C;
         border-radius: 5px;
         display: none;
-        background-color: #0D1117;
     }
 
     .navbar.active {
@@ -542,7 +542,8 @@ footer {
         justify-content: end;
         width: auto;
         border-radius: 10px;
-        left: 100vw;
+        left: 100%;
+        top: 10;
     }
 
     .top_bar.minimized .navbar {
@@ -551,6 +552,7 @@ footer {
         left: 50;
         border: 2px solid #3BB3C0;
         padding: 5px;
+        background-color: #0D1117;
     }
 
     .top_bar.top_bar.minimized .hamburger {
@@ -567,6 +569,7 @@ footer {
 
     .intro {
         font-size: 1.2rem;
+        padding-bottom: 5vh;
     }
 
    
@@ -580,10 +583,15 @@ footer {
 
     .tools {
         gap: 1vh;
+
     }
 
+
+    /* skills */
     .s {
         font-size: 1rem;
+        padding-left: 5vw;
+        padding-right: 5vw;
     }
 
     .my_project {
@@ -679,7 +687,6 @@ footer {
         border: 2px solid #2D343C;
         border-radius: 5px;
         display: none;
-        background-color: #0D1117;
     }
 
     .navbar.active {
@@ -704,6 +711,8 @@ footer {
         left: 50;
         border: 2px solid #3BB3C0;
         padding: 5px;
+        background-color: #0D1117;
+;
     }
 
     .top_bar.top_bar.minimized .hamburger {
@@ -802,6 +811,7 @@ footer {
 
     .intro {
         font-size: 1.2rem;
+        padding-bottom: 5vh;
     }
 
     li {
@@ -824,7 +834,6 @@ footer {
         border: 2px solid #2D343C;
         border-radius: 5px;
         display: none;
-        background-color: #0D1117;
     }
 
     .navbar.active {
@@ -833,9 +842,9 @@ footer {
     }
 
 
-    nav{
+    /* nav{
         margin-top: 2vh;
-    }
+    } */
 
     .top_bar.minimized .title {
         display: none;
@@ -868,9 +877,10 @@ footer {
 
     .paragraphs {
         font-size: 1.1rem;
-        padding-left: 4vh;
-        padding-right: 4vh;
-        margin-top: 8vh;
+        padding-left: 12vh;
+        padding-right: 12vh;
+        margin-top: 4vh;
+        text-align: center;
     }
 
     .tools {
@@ -977,9 +987,7 @@ footer {
         flex-direction: row;
 
     }
- nav{
-        margin-top: 0 ;
-    }
+
     .top_bar.minimized {
         width: auto;
         position: fixed;
@@ -1023,6 +1031,7 @@ footer {
     .paragraphs {
         padding-left: 12vh;
         padding-right: 12vh;
+        font-size: 1.2rem;
     }
 
     .my_project {
@@ -1149,7 +1158,20 @@ footer {
         width: 6vw;
         height: 4vh;
     }
+   
+    .my_project{
+        gap: 5vh;
+    }
 
+    .project {
+        width: 20vh;
+        height: 20vh;
+    }
+
+    .paragraphs{
+        padding-left: 10vh;
+        padding-right: 10vh;
+    }
 }
 
 /* for zooming out as well */
@@ -1159,5 +1181,7 @@ footer {
         width: 6vh;
         height: 3vh;
     }
+
+
 
 }
