--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,7 @@ li {
     align-items: center;
     color: aliceblue;
     margin-top: 10vh;
+   
 }
 
 .about_me_title,
@@ -235,6 +236,41 @@ li {
 
 }
 
+/* animation on scrolling */
+.paragraphs, .prog_and_tools{
+    opacity: 0;
+    transform: translateY(40px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.paragraphs.visible, .prog_and_tools.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.skills{
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.skills.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.my_project{
+    opacity: 0;
+    transform: translateY(40px);
+    transition: opacity 0.6s ease-in, transform 0.6s ease-in;
+
+}
+
+.my_project.visible{
+    opacity: 1;
+    transform: translateY(0);
+
+}
 
 .prog_and_tools {
     margin-top: 8vh;
@@ -951,7 +987,7 @@ footer {
         left: 0;
         background: linear-gradient(135deg, #0f172a, #3BB3C0);
         animation-delay: 0s;
-
+        
     }
 
 
