button size changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1218,8 +1218,8 @@ footer {
 @media (min-width: 4200px) {
 
     #submit {
-        width: 6vh;
-        height: 3vh;
+        width: 2vw;
+        height: 2vh;
     }
 
     
